--- a/package.json
+++ b/package.json
@@ -9,12 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@formatjs/intl-localematcher": "^0.4.2",
     "@types/node": "20.4.5",
     "@types/react": "18.2.18",
     "@types/react-dom": "18.2.7",
     "autoprefixer": "10.4.14",
     "eslint": "8.46.0",
     "eslint-config-next": "13.4.12",
+    "negotiator": "^0.6.3",
     "next": "13.4.12",
     "next-auth": "^4.24.4",
     "postcss": "8.4.27",
@@ -24,6 +26,7 @@
     "typescript": "5.1.6"
   },
   "devDependencies": {
+    "@types/negotiator": "^0.6.2",
     "prettier": "^3.0.0",
     "prettier-plugin-tailwindcss": "^0.4.1"
   }
