--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "eslint": "8.46.0",
     "eslint-config-next": "13.4.12",
     "negotiator": "^0.6.3",
-    "next": "13.4.12",
+    "next": "^13.5.6",
     "next-auth": "^4.24.4",
     "postcss": "8.4.27",
     "react": "18.2.0",
